--- a/index.css
+++ b/index.css
@@ -1,3 +1,9 @@
 #heading{
     color: red;
 }
+
+#header{
+    display: flex;
+    justify-content: space-between;
+    background-color: rgb(204, 207, 207);
+}
